oxiplate-derive/tests/crates/unreachable/tests/broken/literal/char-two-chars.stderr
error: More than one char present in char expression
 --> tests/broken/literal/char-two-chars.rs:4:23
  |
4 | #[oxiplate_inline("{{ ''1' }}")]
  |                       ^^^^
  |
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=More+than+one+char+present+in+char+expression
  = help: Include template that caused the issue.

error: proc-macro derive panicked
 --> tests/broken/literal/char-two-chars.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/literal/char-two-chars.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Data`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
